--- a/views/juego.erb
+++ b/views/juego.erb
@@ -6,6 +6,7 @@
 	<title></title>
 </head>
 <body>
+	<h1>"Juguemos!!!"</h1>
 	<h1> <%= session['mensaje'] %> </h1>
 	<h2> <%= session['reto']%> </h2>
 	<form action="/validar" method="post">
