User Story 01 - refactor pàgina juego

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,7 @@
 <body>
 	<h1>Bienvenido a RubyAhorcado</h1>
 	<form action="/configurar" method="post">
-		<h3>Quiere Jugar</h3>
+		<h3>¿Quiere Jugar?</h3>
 		<input type="submit" value="Jugar">
 	</form>
 </body>
