--- a/views/juego.erb
+++ b/views/juego.erb
@@ -12,7 +12,10 @@
 	<form action="/validar" method="post">
 		<input type="texto" name="intento">
 		<input type="submit" value="Adivinar">
+
 	</form>
+	<h1>_  _  _  _  _</h1>
+	<h1>Recuerda que tienes hasta 5 intentos fallidos</h1>
 	<h2> <%= session['resultado']%> </h2>
 
 	<h2> <%= session['historico']%> </h2>
