--- a/views/index.erb
+++ b/views/index.erb
@@ -3,11 +3,24 @@
 <head>
 	<title></title>
 </head>
+<center>
 <body>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	
 	<h1>Bienvenido a RubyAhorcado</h1>
 	<form action="/configurar" method="post">
 		<h3>¿Quiere Jugar?</h3>
 		<input type="submit" value="Jugar">
 	</form>
 </body>
+</center>
 </html>
