--- a/views/juego.erb
+++ b/views/juego.erb
@@ -20,11 +20,11 @@
 	
 	
 	<h2> <%= session['prueba']%> </h2>
-	<input type="texto" name="l1" value=" " size="1" maxlength="1" disabled>
-	<input type="texto" name="l2" size="1" maxlength="1" disabled>
-	<input type="texto" name="l3" size="1" maxlength="1" disabled>
-	<input type="texto" name="l4" size="1" maxlength="1" disabled>
-	<input type="texto" name="l5" size="1" maxlength="1" disabled>
+	<input type="texto" name="l1" value= <%= session['l1']%> size="1" maxlength="1" disabled>
+	<input type="texto" name="l2" value= <%= session['l2']%> size="1" maxlength="1" disabled>
+	<input type="texto" name="l3" value= <%= session['l3']%> size="1" maxlength="1" disabled>
+	<input type="texto" name="l4" value= <%= session['l4']%> size="1" maxlength="1" disabled>
+	<input type="texto" name="l5" value= <%= session['l5']%> size="1" maxlength="1" disabled>
 	<hr width:300px>
 
 	
